// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnwrappedLoginForm renders a blank form for logging in on pageload 1`] = `
<Div
  className=""
>
  <Form
    className="hmt-form"
    colon={true}
    hideRequiredMark={false}
    layout="horizontal"
    onSubmit={[Function]}
  >
    <FormItem
      hasFeedback={false}
    >
      <Input
        aria-label="Email"
        autoFocus={true}
        placeholder="Email"
        prefix={
          <Icon
            style={
              Object {
                "color": "rgba(0,0,0,.25)",
              }
            }
            type="user"
          />
        }
        type="text"
      />
    </FormItem>
    <FormItem
      hasFeedback={false}
    >
      <Input
        aria-label="Password"
        placeholder="Password"
        prefix={
          <Icon
            style={
              Object {
                "color": "rgba(0,0,0,.25)",
              }
            }
            type="lock"
          />
        }
        type="password"
      />
    </FormItem>
    <FormItem
      hasFeedback={false}
    >
      <Button
        block={true}
        className="black-button"
        ghost={false}
        htmlType="submit"
        loading={false}
        size="default"
        type="primary"
      >
        Sign In
      </Button>
      <A
        className=""
        href="http://localhost:8000/accounts/password_reset"
        style={
          Object {
            "float": "right",
          }
        }
      >
        Forgot password?
      </A>
    </FormItem>
  </Form>
  <RegisterModal
    isVisible={false}
    onCancel={[Function]}
  />
</Div>
`;

exports[`UnwrappedLoginForm renders an additional registration button if showRegisterButton is provided 1`] = `
<Div
  className=""
>
  <Form
    className="hmt-form"
    colon={true}
    hideRequiredMark={false}
    layout="horizontal"
    onSubmit={[Function]}
  >
    <FormItem
      hasFeedback={false}
    >
      <Input
        aria-label="Email"
        autoFocus={true}
        placeholder="Email"
        prefix={
          <Icon
            style={
              Object {
                "color": "rgba(0,0,0,.25)",
              }
            }
            type="user"
          />
        }
        type="text"
      />
    </FormItem>
    <FormItem
      hasFeedback={false}
    >
      <Input
        aria-label="Password"
        placeholder="Password"
        prefix={
          <Icon
            style={
              Object {
                "color": "rgba(0,0,0,.25)",
              }
            }
            type="lock"
          />
        }
        type="password"
      />
    </FormItem>
    <FormItem
      hasFeedback={false}
    >
      <Button
        block={true}
        className="black-button"
        ghost={false}
        htmlType="submit"
        loading={false}
        size="default"
        type="primary"
      >
        Sign In
      </Button>
      <Button
        block={true}
        className="black-button d-flex"
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[Function]}
        size="default"
      >
        <Div
          className="d-flex mx-auto"
        >
          <Span
            className="d-none d-sm-inline-block my-auto"
          >
            Don't have an account? Sign up free
          </Span>
          <Span
            className="d-inline-block d-sm-none my-auto"
          >
            Sign up free
          </Span>
          <Icon
            className="my-auto ms-1"
            type="arrow-right"
          />
        </Div>
      </Button>
      <A
        className=""
        href="http://localhost:8000/accounts/password_reset"
        style={
          Object {
            "float": "right",
          }
        }
      >
        Forgot password?
      </A>
    </FormItem>
  </Form>
  <RegisterModal
    isVisible={false}
    onCancel={[Function]}
  />
</Div>
`;

exports[`UnwrappedLoginForm renders large buttons if largeButtons is true 1`] = `
<Div
  className=""
>
  <Form
    className="hmt-form"
    colon={true}
    hideRequiredMark={false}
    layout="horizontal"
    onSubmit={[Function]}
  >
    <FormItem
      hasFeedback={false}
    >
      <Input
        aria-label="Email"
        autoFocus={true}
        placeholder="Email"
        prefix={
          <Icon
            style={
              Object {
                "color": "rgba(0,0,0,.25)",
              }
            }
            type="user"
          />
        }
        type="text"
      />
    </FormItem>
    <FormItem
      hasFeedback={false}
    >
      <Input
        aria-label="Password"
        placeholder="Password"
        prefix={
          <Icon
            style={
              Object {
                "color": "rgba(0,0,0,.25)",
              }
            }
            type="lock"
          />
        }
        type="password"
      />
    </FormItem>
    <FormItem
      hasFeedback={false}
    >
      <Button
        block={true}
        className="black-button"
        ghost={false}
        htmlType="submit"
        loading={false}
        size="large"
        type="primary"
      >
        Sign In
      </Button>
      <Button
        block={true}
        className="black-button d-flex"
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[Function]}
        size="large"
      >
        <Div
          className="d-flex mx-auto"
        >
          <Span
            className="d-none d-sm-inline-block my-auto"
          >
            Don't have an account? Sign up free
          </Span>
          <Span
            className="d-inline-block d-sm-none my-auto"
          >
            Sign up free
          </Span>
          <Icon
            className="my-auto ms-1"
            type="arrow-right"
          />
        </Div>
      </Button>
      <A
        className=""
        href="http://localhost:8000/accounts/password_reset"
        style={
          Object {
            "float": "right",
          }
        }
      >
        Forgot password?
      </A>
    </FormItem>
  </Form>
  <RegisterModal
    isVisible={false}
    onCancel={[Function]}
  />
</Div>
`;
